fix lỗi không fetch được role